app/assets/styles/modules/_site-header.css
.site-header {
  background-color: $HeaderFooterLiteBackground;
  z-index: $zIndex-1-FirstLevel;
  position: fixed;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: transform $transitionDuration_siteHeaderMenuVisibilityOnScroll $cb-ease-in-out;

  &--slideshow {
    background-color: $HeaderFooterDarkBackgroundTransparent;
  }

  &--collapse {
    transform: translateY(-100px);
  }
  &--expand {
    transform: translateY(0);
  }

  &--dark {
    background-color: $HeaderFooterDarkBackground;
  }

  &__breadcrumb {
    position: fixed;
    margin: 0;
    transform: translateY(0);
    will-change: transform;
    background-color: $bodyLiteBGColor;
    padding: 10px 0;
    z-index: $zIndex-1-FirstLevel;
    transition: all $transitionDuration_siteHeaderMenuVisibilityOnScroll $cb-ease-in-out;
    &--dark-bg {
      background-color: $bodyDarkBGColor;
    }
    &__fixed {
      transform: translateY(-150px);
    }
    &--transparent {
      background-color: $HeaderFooterDarkBackgroundTransparent;
    }

    &--is-hidden {
      opacity: 0;
      z-index: -1;
    }
    ol {
      list-style: none;
      display: flex;
      flex-wrap: wrap;
      padding: 0;
      margin: 0;
    }
    li {
      display: inline;
    }
    @mixin atMax1200Wide {
      width: 100%;
      padding: 10px 18px;
    }
  }

  &__menu-dropdown {
    position: fixed;
    top: 88px;
    left: 0;
    width: 100%;
    visibility: hidden;
    opacity: 0;
    display: flex;
    transition-property: opacity, visibility;
    transition-duration: $transitionDuration;
    transition-timing-function: $cb-ease-in-out;

    &--visible {
      visibility: visible;
      opacity: 1;
    }
    &--container {
      position: relative;
      opacity: 1;
      background-color: $HeaderFooterLiteBackground;
      height: fit-content;
      width: calc(100% - 2px); /*fix border cut off at left*/
      left: 1px;
      padding-top: 0;
      padding-bottom: 0;
      padding-left: 40px;
      &--dark {
        background-color: $HeaderFooterDarkBackground;
      }
      @mixin atMinWidthToHideMenuIcon {
        border: 1px solid #ababc0;
        padding-top: 10px;
        padding-bottom: 10px;
      }
      @mixin atMaxWidthForVisibleMenuIcon {
        border: 0;
        padding-left: 10px;
        @media (orientation: landscape) {
          padding-top: 8px;
          padding-bottom: 8px;
        }
      }
      @mixin atMin1200Wide {
        padding-top: 35px;
        padding-bottom: 35px;
      }
    }
    @mixin atMaxWidthForVisibleMenuIcon {
      position: relative;
      top: 7px;
    }
  }

  @mixin atMaxWidthForVisibleMenuIcon {
    height: 100px;
    right: 0px;
    padding-top: 0;
    width: 100vw;
    left: 0;
    [class*="col-"] {
      width: 100%;
    }
    .col-1 {
      display: none;
    }
    .col-2 {
      max-height: 0;
      transition: max-height $transitionDuration $cb-ease-in-out;
      &--grow {
        max-height: calc(100vw - 150px);
        overflow-y: auto;
      }
      &--shrink {
        max-height: 0;
      }
    }
  }

  .col-2 {
    &--grow {
      max-height: calc(100vh - 200px);
      overflow-y: auto;
    }
  }
  @mixin atMinWidthToHideMenuIcon {
    padding: 12px 0;
  }

  &__logo {
    padding-top: 17px;
    border: 0;
    /*border: 1px solid yellow;*/
    width: 220px;
    position: relative;
    z-index: $zIndex-1-FirstLevel;
  }

  &__menu-icon {
    width: 90px;
    height: 70px;
    position: absolute;
    z-index: $zIndex-1-FirstLevel;
    top: 10px;
    right: 50px;
    background-color: $HeaderFooterLiteBackground;
    color: $bodyLiteBGFontColor;
    border: 1px solid $bodyLiteBGFontColor;
    border-radius: 9999px;
    display: inline-flex;
    justify-content: center;
    align-items: center;

    &:hover {
      background-color: $hoverColorLiteBG;
      border: 3px solid $bodyLiteBGFontColor;
    }

    &:focus {
      border: 3px solid $bodyLiteBGFontColor;
    }

    &--dark {
      background-color: $siteHeaderMenuIconDarkBackgroundColor;
      color: $bodyDarkBGFontColor;
      border: 1px solid $bodyDarkBGFontColor;

      &:hover {
        background-color: $siteHeaderMenuIconHoverColorDarkBG;
        border: 3px solid $bodyDarkBGFontColor;
      }

      &:focus {
        border: 3px solid $bodyDarkBGFontColor;
      }
    }

    @mixin atMaxWidthForVisibleMenuIcon {
      right: 10px;
    }

    @mixin atMinWidthToHideMenuIcon {
      display: none;
    }
  }

  &__menu-icon--collapsed::after {
    font-size: 30px;
    font-family: "Material Icons";
    content: "\e5d2";
  }

  &__menu-icon--expanded::after {
    font-size: 30px;
    font-family: "Material Icons";
    content: "\e5cd";
  }
}

